--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <a href="html/yoimiya.html" class="a_icon"><img src="images/characters/Yoimiya_head.png" title="Yoimiya"></a>
                 <a href="html/zhongli.html" class="a_icon"><img src="images/characters/Zhongli_head.png" title="Zhongli"></a>
             </div>
-            <li class="icon_navbar"><a href="" class="icon_navbar"><img src="images/icons/Icon_Inventory_Quest.png" title="Constellations"></a></li>
+            <li class="icon_navbar"><a href="https://webstatic-sea.mihoyo.com/app/ys-map-sea/index.html?utm_source=hoyolab&lang=en-us#/map/2" class="icon_navbar" target="_blank"><img src="images/icons/Icon_Inventory_Quest.png" title="Map"></a></li>
         </ul>
     </nav>
 <script src="script/main.js"></script>
