--- a/html/hutao.html
+++ b/html/hutao.html
@@ -75,7 +75,7 @@
     <div class="background">
     </div>
 
-    <div class="character hutao_box">
+    <div class="character resized_toobig">
         <img src="../images/characters/big_hutao.png">
     </div>
 
