--- a/html/sayu.html
+++ b/html/sayu.html
@@ -75,7 +75,7 @@
     <div class="background">
     </div>
 
-    <div class="character resized">
+    <div class="character sayu_resized">
         <img src="../images/characters/big_sayu.png">
     </div>
 
