--- a/html/yoimiya.html
+++ b/html/yoimiya.html
@@ -75,7 +75,7 @@
     <div class="background">
     </div>
 
-    <div class="character resized">
+    <div class="character resized xiao_resized">
         <img src="../images/characters/big_yoimiya.png">
     </div>
 
