--- a/html/albedo.html
+++ b/html/albedo.html
@@ -95,6 +95,13 @@
                         <span class="weaponsText">Elemental Skill DMG is increased by 40/50/60/70/80% of DEF. The effect will be triggered no more than once every 1.5s and will be cleared 0.1s after the Elemental Skill deals DMG.</span>
                     </div>
                 </div>
+                <div>
+                    <img src="../images/weapons/harbinger.png" class="weapon rare3">
+                    <div>
+                        <span class="weaponsName">Harbinger of Dawn</span>
+                        <span class="weaponsText">When HP is above 90%, increases CRIT Rate by 14/18/22/24/28%.</span>
+                    </div>
+                </div>
             </div>
 
             <div class="artifacts">
