put a div to materials

--- a/html/albedo.html
+++ b/html/albedo.html
@@ -149,6 +149,9 @@
                 </div>
                 <span class="ascension">Ascension</span>
                 <div>
+
+                </div>
+                <div>
                     <img src="../images/materials/topaz1.png" class="material rare2">
                     <span class="materialsName">Prithiva Topaz Sliver (x1)</span>
                 </div>
