changing materials display

--- a/html/albedo.html
+++ b/html/albedo.html
@@ -148,44 +148,77 @@
                     <img src="../images/icons/page_checked.png" id="b3">
                     <img src="../images/icons/page.png" id="b4">
                 </div>
-                <div>
-
+                <div class="ascensionMats">
+                    <div>
+                        <img src="../images/materials/topaz1.png" class="material rare2">
+                        <span class="materialsName">Prithiva Topaz Sliver (x1)</span>
+                    </div>
+                    <div>
+                        <img src="../images/materials/topaz2.png" class="material rare3">
+                        <span class="materialsName">Prithiva Topaz Fragment (x9)</span>
+                    </div>
+                    <div>
+                        <img src="../images/materials/topaz3.png" class="material rare4">
+                        <span class="materialsName">Prithiva Topaz Chunk (x9)</span>
+                    </div>
+                    <div>
+                        <img src="../images/materials/topaz4.png" class="material rare5">
+                        <span class="materialsName">Prithiva Topaz Gemstone (x6)</span>
+                    </div>
+                    <div>
+                        <img src="../images/materials/basalt.png" class="material rare4">
+                        <span class="materialsName">Basalt Pillar (x46)</span>
+                    </div>
+                    <div>
+                        <img src="../images/materials/cecilia.png" class="material rare1">
+                        <span class="materialsName">Cecilia (x168)</span>
+                    </div>
+                    <div>
+                        <img src="../images/materials/divining.png" class="material rare1">
+                        <span class="materialsName">Divining Scroll (x18)</span>
+                    </div>
+                    <div>
+                        <img src="../images/materials/sealed.png" class="material rare2">
+                        <span class="materialsName">Sealed Scroll (x30)</span>
+                    </div>
+                    <div>
+                        <img src="../images/materials/forbidden.png" class="material rare3">
+                        <span class="materialsName">Forbidden Curse Scroll (x36)</span>
+                    </div>
                 </div>
-                <div>
-                    <img src="../images/materials/topaz1.png" class="material rare2">
-                    <span class="materialsName">Prithiva Topaz Sliver (x1)</span>
-                </div>
-                <div>
-                    <img src="../images/materials/topaz2.png" class="material rare2">
-                    <span class="materialsName">Prithiva Topaz Fragment (x9)</span>
-                </div>
-                <div>
-                    <img src="../images/materials/topaz3.png" class="material rare2">
-                    <span class="materialsName">Prithiva Topaz Chunk (x9)</span>
-                </div>
-                <div>
-                    <img src="../images/materials/topaz4.png" class="material rare2">
-                    <span class="materialsName">Prithiva Topaz Gemstone (x6)</span>
-                </div>
-                <div>
-                    <img src="../images/materials/basalt.png" class="material rare2">
-                    <span class="materialsName">Basalt Pillar (x46)</span>
-                </div>
-                <div>
-                    <img src="../images/materials/cecilia.png" class="material rare2">
-                    <span class="materialsName">Cecilia (x168)</span>
-                </div>
-                <div>
-                    <img src="../images/materials/divining.png" class="material rare2">
-                    <span class="materialsName">Divining Scroll (x18)</span>
-                </div>
-                <div>
-                    <img src="../images/materials/sealed.png" class="material rare2">
-                    <span class="materialsName">Sealed Scroll (x30)</span>
-                </div>
-                <div>
-                    <img src="../images/materials/forbidden.png" class="material rare2">
-                    <span class="materialsName">Forbidden Curse Scroll (x36)</span>
+                <div class="talentMats">
+                    <div>
+                        <img src="../images/talents/teaching_ballad.png" class="material rare2">
+                        <span class="materialsName">Teachings of Ballad (x9)</span>
+                    </div>
+                    <div>
+                        <img src="../images/talents/guide_ballad.png" class="material rare3">
+                        <span class="materialsName">Guide to Ballad (x63)</span>
+                    </div>
+                    <div>
+                        <img src="../images/talents/philosophie_ballad.png" class="material rare4">
+                        <span class="materialsName">Philosophies of Ballad (x114)</span>
+                    </div>
+                    <div>
+                        <img src="../images/materials/divining.png" class="material rare1">
+                        <span class="materialsName">Divining Scroll (x18)</span>
+                    </div>
+                    <div>
+                        <img src="../images/materials/sealed.png" class="material rare2">
+                        <span class="materialsName">Sealed Scroll (x66)</span>
+                    </div>
+                    <div>
+                        <img src="../images/materials/forbidden.png" class="material rare3">
+                        <span class="materialsName">Forbidden Curse Scroll (x93)</span>
+                    </div>
+                    <div>
+                        <img src="../images/talents/teaching_ballad.png" class="material rare5">
+                        <span class="materialsName">Tusk of Monoceros Caeli (x18)</span>
+                    </div>
+                    <div>
+                        <img src="../images/talents/teaching_ballad.png" class="material rare5">
+                        <span class="materialsName">Crown of Insight (x3)</span>
+                    </div>
                 </div>
             </div>
 
