changing materials display

--- a/html/albedo.html
+++ b/html/albedo.html
@@ -186,7 +186,7 @@
                         <span class="materialsName">Forbidden Curse Scroll (x36)</span>
                     </div>
                 </div>
-                <div class="talentMats">
+                <div class="talentsMats">
                     <div>
                         <img src="../images/talents/teaching_ballad.png" class="material rare2">
                         <span class="materialsName">Teachings of Ballad (x9)</span>
