changed pae btns + materials display (js not working anymore)

--- a/html/albedo.html
+++ b/html/albedo.html
@@ -98,8 +98,8 @@
                 <div>
                     <img src="../images/img-genshin/weapons/primordial_jade_cutter.png" class="weapon rare5">
                     <div>
-                        <span class="weaponsName">Harbinger of Dawn</span>
-                        <span class="weaponsText">When HP is above 90%, increases CRIT Rate by 14/18/22/24/28%.</span>
+                        <span class="weaponsName">Primordial Jade Cutter</span>
+                        <span class="weaponsText">HP increased by 20/25/30/35/40%. Additionally, provides an ATK bonus based on 1.2/1.5/1.8/2.1/2.4% of the weilder's Max HP.</span>
                     </div>
                 </div>
             </div>
@@ -143,7 +143,6 @@
             </div>
 
             <div class="materials">
-                <span class="ascension">Ascension</span>
                 <div class="page">
                     <img src="../images/icons/page_checked.png" id="b3">
                     <img src="../images/icons/page.png" id="b4">
