added span for materials content + change the content in js

--- a/html/albedo.html
+++ b/html/albedo.html
@@ -147,6 +147,7 @@
                     <img src="../images/icons/page_checked.png" id="b3">
                     <img src="../images/icons/page.png" id="b4">
                 </div>
+                <span class="matName">Ascension</span>
                 <div class="ascensionMats">
                     <div>
                         <img src="../images/img-genshin/items/prithiva_topaz_sliver.png" class="material rare2">
