changed some display stuff + added the first talent

--- a/html/albedo.html
+++ b/html/albedo.html
@@ -229,6 +229,27 @@
                     <img src="../images/icons/page.png" id="b7">
                     <img src="../images/icons/page.png" id="b8">
                 </div>
+                <div class="talent1">
+                    <div>
+                        <img src="../images/img-genshin/skills/albedo/talent_1.png" class="talentimg">
+                        <span class="talentsName">Favonius Bladework - Weiss</span>
+                        <span>Normal Attack</span>
+                        <div>
+                            <span class="talentsType">Normal Attack</span>
+                            <span class="talentsContent">Perform up to 5 rapid strikes.</span>
+                            <span class="talentsType">Charged Attack</span>
+                            <span class="talentsContent">Consumes a certain amount of Stamina to unleash 2 rapid sword strikes.</span>
+                            <span class="talentsType">Plunging Attack</span>
+                            <span class="talentsContent">Plunges from mid-air to strike the ground below, damaging opponents along the path and dealing AoE DMG upon impact.</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="talent2">
+                </div>
+                <div class="talent3">
+                </div>
+                <div class="talentPass">
+                </div>
             </div>
 
             <div class="constellations"></div>
