constellation : switch pages + js dropdown going down (need up omg, incoming lol)

--- a/html/albedo.html
+++ b/html/albedo.html
@@ -298,7 +298,17 @@
                 </div>
             </div>
 
-            <div class="constellations"></div>
+            <div class="constellations">
+                <div class="page">
+                    <img src="../images/icons/page_checked.png" id="b9">
+                    <img src="../images/icons/page.png" id="b10">
+                    <img src="../images/icons/page.png" id="b11">
+                    <img src="../images/icons/page.png" id="b12">
+                    <img src="../images/icons/page.png" id="b13">
+                    <img src="../images/icons/page.png" id="b14">
+                </div>
+
+            </div>
 
         </div>
         <script src="../script/charaNavBar.js"></script>
