added the future video spot

--- a/html/albedo.html
+++ b/html/albedo.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="../style/main.css">
     <link rel="stylesheet" type="text/css" href="../style/charactersNavBar.css" />
     <link rel="stylesheet" type="text/css" href="../style/content.css" />
+    <link rel="stylesheet" type="text/css" href="../style/footer.css" />
     <link rel="icon" type="text/css" href="../images/icons/Character_Paimon_Portrait.png">
     <script src="../script/main.js"></script>
     <script src="../script/charaNavBar.js"></script>
@@ -23,10 +24,8 @@
 
     <nav class="navigation">
         <ul class="header">
-            <li class="icon_navbar"><a href="" class="icon_navbar"><img class="nav_icon_header" src="../images/icons/Icon_Inventory_Furnishings.png" title="Home"></a></li>
+            <li class="icon_navbar"><a href="../index.html" class="icon_navbar"><img class="nav_icon_header" src="../images/icons/Icon_Inventory_Furnishings.png" title="Home"></a></li>
             <div class="dropdown">
-
-
                 <li class="icon_navbar char_icon"><a href="" class="icon_navbar"><img class="nav_icon_header" src="../images/icons/Icon_Inventory_Character_Development_Items.png" title="Characters"></a></li>
                 <div class="characters">
                     <a href="../html/albedo.html" class="a_icon"><img src="../images/characters/Albedo_head.png" title="Albedo"></a>
@@ -323,7 +322,13 @@
 
     <div class="name"><span>Albedo</span></div>
 
-<!--    <footer>tttt</footer>-->
+    <div class="video">
+        <div>
+            <img src="../images/thumbnails/albedo.png" class="thumbnails">
+        </div>
+    </div>
+
+<!--    <footer>a</footer>-->
 
 </body>
 </html>
