--- a/html/albedo.html
+++ b/html/albedo.html
@@ -351,7 +351,7 @@
 
     <div class="video">
         <div>
-            <img src="../images/thumbnails/albedo.png" class="thumbnails">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/xOJfaOI87XU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thumbnails"></iframe>
         </div>
     </div>
 
