navbar dropdown fixed : onclick / no hover

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="dropdown">
 
 
-            <li class="icon_navbar char_icon"><a href="" class="icon_navbar"><img class="nav_icon_header" src="images/icons/Icon_Inventory_Character_Development_Items.png" title="Characters"></a></li>
+            <li class="icon_navbar char_icon" onclick="showCharacters()"><a class="icon_navbar"><img class="nav_icon_header" src="images/icons/Icon_Inventory_Character_Development_Items.png" title="Characters"></a></li>
                 <div class="characters">
                     <a href="html/albedo.html" class="a_icon"><img src="images/characters/Albedo_head.png" title="Albedo"></a>
                     <a href="html/aloy.html" class="a_icon"><img src="images/characters/Aloy_head.png" title="Aloy"></a>
