added infos in the footer (need to add more)

--- a/html/albedo.html
+++ b/html/albedo.html
@@ -26,7 +26,7 @@
         <ul class="header">
             <li class="icon_navbar"><a href="../index.html" class="icon_navbar"><img class="nav_icon_header" src="../images/icons/Icon_Inventory_Furnishings.png" title="Home"></a></li>
             <div class="dropdown">
-                <li class="icon_navbar char_icon"><a href="" class="icon_navbar"><img class="nav_icon_header" src="../images/icons/Icon_Inventory_Character_Development_Items.png" title="Characters"></a></li>
+                <li class="icon_navbar char_icon" onclick="showCharacters()"><a class="icon_navbar"><img class="nav_icon_header" src="../images/icons/Icon_Inventory_Character_Development_Items.png" title="Characters"></a></li>
                 <div class="characters">
                     <a href="../html/albedo.html" class="a_icon"><img src="../images/characters/Albedo_head.png" title="Albedo"></a>
                     <a href="../html/aloy.html" class="a_icon"><img src="../images/characters/Aloy_head.png" title="Aloy"></a>
@@ -355,7 +355,23 @@
         </div>
     </div>
 
-    <footer>a</footer>
+    <footer>
+        <div class="top">top</div>
+        <div class="bot">
+            <div class="logos">
+                <img src="../images/icons/Character_Paimon_Portrait.png">
+                <img src="../images/img-genshin/genshin_logo.png">
+            </div>
+            <div class="links">
+                <div>
+                    <a href="https://github.com/antaww" target="_blank">GitHub Antaww</a>
+                    <a href="https://github.com/xhmyjae" target="_blank">GitHub xhmyjae</a>
+                </div>
+                <p><b>Build Me Paimon</b> is a site created by fans to help players to build their Genshin's characters.
+                It is not affiliated with miHoYo.</p>
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
