shenhe + img style

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                     <a href="html/rosaria.html" class="a_icon"><img src="images/characters/Rosaria_head.png" title="Rosaria"></a>
                     <a href="html/kokomi.html" class="a_icon"><img src="images/characters/Kokomi_head.png" title="Sangonomiya Kokomi"></a>
                     <a href="html/sayu.html" class="a_icon"><img src="images/characters/Sayu_head.png" title="Sayu"></a>
+                    <a href="html/shenhe.html" class="a_icon"><img src="images/characters/Shenhe_head.png" title="Shenhe"></a>
                     <a href="html/sucrose.html" class="a_icon"><img src="images/characters/Sucrose_head.png" title="Sucrose"></a>
                     <a href="html/tartaglia.html" class="a_icon"><img src="images/characters/Tartaglia_head.png" title="Tartaglia"></a>
                     <a href="html/thoma.html" class="a_icon"><img src="images/characters/Thoma_head.png" title="Thoma"></a>
