--- a/html/albedo.html
+++ b/html/albedo.html
@@ -356,7 +356,11 @@
     </div>
 
     <footer>
-        <div class="top">top</div>
+        <div class="top">
+            <a href="https://discord.gg/sDv2BfsA7W" target="_blank"><img src="../images/icons/discord.png"></a>
+            <a href="https://www.youtube.com/channel/UCiS882YPwZt1NfaM0gR0D9Q" target="_blank"><img src="../images/icons/youtube.png"></a>
+            <a href="https://www.hoyolab.com/home" target="_blank"><img src="../images/icons/hoyolab.png"></a>
+        </div>
         <div class="bot">
             <div class="logos">
                 <img src="../images/icons/Character_Paimon_Portrait.png">
