correction of a grammar mistake

--- a/html/albedo.html
+++ b/html/albedo.html
@@ -371,7 +371,7 @@
                     <a href="https://github.com/antaww" target="_blank">GitHub Antaww</a>
                     <a href="https://github.com/xhmyjae" target="_blank">GitHub xhmyjae</a>
                 </div>
-                <p><b>Build Me Paimon</b> is a site created by fans to help players to build their Genshin's characters.
+                <p><b>Build Me Paimon</b> is a site created by fans to help players build their Genshin's characters.
                 It is not affiliated with miHoYo.</p>
             </div>
         </div>
