--- a/html/albedo.html
+++ b/html/albedo.html
@@ -408,14 +408,14 @@
 
     <footer>
         <div class="top">
-            <a href="https://discord.gg/sDv2BfsA7W" target="_blank"><img src="../images/icons/discord.png"></a>
-            <a href="https://www.youtube.com/channel/UCiS882YPwZt1NfaM0gR0D9Q" target="_blank"><img src="../images/icons/youtube.png"></a>
-            <a href="https://www.hoyolab.com/home" target="_blank"><img src="../images/icons/hoyolab.png"></a>
+            <a href="https://discord.gg/sDv2BfsA7W" target="_blank"><img src="../images/icons/discord.png" title="Community server" alt="Community server"></a>
+            <a href="https://www.youtube.com/channel/UCiS882YPwZt1NfaM0gR0D9Q" target="_blank"><img src="../images/icons/youtube.png" title="Youtube channel" alt="Youtube channel"></a>
+            <a href="https://www.hoyolab.com/home" target="_blank"><img src="../images/icons/hoyolab.png" title="Hoyolab" alt="Hoyolab"></a>
         </div>
         <div class="bot">
             <div class="logos">
-                <img src="../images/icons/Character_Paimon_Portrait.png">
-                <img src="../images/img-genshin/genshin_logo.png">
+                <a href="../index.html"><img src="../images/icons/Character_Paimon_Portrait.png" title="BuildMePaimon" alt="BuildMePaimon"></a>
+                <a href="https://genshin.mihoyo.com/en/home" target="_blank"><img src="../images/img-genshin/genshin_logo.png" title="Genshin Website" alt="Genshin Website"></a>
             </div>
             <div class="links">
                 <div>
