--- a/html/albedo.html
+++ b/html/albedo.html
@@ -370,6 +370,7 @@
                 <div>
                     <a href="https://github.com/antaww" target="_blank">GitHub Antaww</a>
                     <a href="https://github.com/xhmyjae" target="_blank">GitHub xhmyjae</a>
+                    <a href = "mailto: antoine.pizzetta@ynov.com">Contact Us</a>
                 </div>
                 <p><b>Build Me Paimon</b> is a site created by fans to help players build their Genshin's characters.
                 It is not affiliated with miHoYo.</p>
