github links: hover working

--- a/html/albedo.html
+++ b/html/albedo.html
@@ -419,8 +419,8 @@
             </div>
             <div class="links">
                 <div>
-                    <a href="https://github.com/antaww" target="_blank">GitHub Antaww</a>
-                    <a href="https://github.com/xhmyjae" target="_blank">GitHub xhmyjae</a>
+                    <a href="https://github.com/antaww" target="_blank" class="github_links">GitHub antaww</a>
+                    <a href="https://github.com/xhmyjae" target="_blank" class="github_links">GitHub xhmyjae</a>
                 </div>
                 <p><b>Build Me Paimon</b> is a site created by fans to help players build their Genshin's characters.
                 It is not affiliated with miHoYo.</p>
