geo constellation color

--- a/html/albedo.html
+++ b/html/albedo.html
@@ -304,7 +304,7 @@
                 </div>
             </div>
 
-            <div class="constellations">
+            <div class="constellations geo">
                 <div class="page">
                     <img src="../images/icons/page_checked.png" id="b9">
                     <img src="../images/icons/page.png" id="b10">
@@ -384,7 +384,7 @@
                         <span class="constellationsName">Dust of Purification</span>
                         <span>Constellation 6</span>
                         <div>
-                            <span clas="constellationsDescription">
+                            <span class="constellationsDescription">
                                 If active party members within the AoE are protected by a shield created by Crystallize,
                                 Solar Isotoma increases their DMG by 17%.
                             </span>
