--- a/html/albedo.html
+++ b/html/albedo.html
@@ -414,12 +414,12 @@
         </div>
         <div class="bot">
             <div class="logos">
-                <a href="../index.html"><img src="../images/icons/Character_Paimon_Portrait.png" title="BuildMePaimon" alt="BuildMePaimon"></a>
+                <a href="../index.html" target="_blank"><img src="../images/icons/Character_Paimon_Portrait.png" title="BuildMePaimon" alt="BuildMePaimon"></a>
                 <a href="https://genshin.mihoyo.com/en/home" target="_blank"><img src="../images/img-genshin/genshin_logo.png" title="Genshin Website" alt="Genshin Website"></a>
             </div>
             <div class="links">
                 <div>
-                    <a href="https://github.com/antaww" target="_blank" class="github_links">GitHub Antaww</a>
+                    <a href="https://github.com/antaww" target="_blank" class="github_links">GitHub antaww</a>
                     <a href="https://github.com/xhmyjae" target="_blank" class="github_links">GitHub xhmyjae</a>
                     <a href = "mailto: antoine.pizzetta@ynov.com" class="github_links">Contact Us</a>
                 </div>
