--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             background-repeat: no-repeat;
         }
     </style>
+    <div class="loader-wrapper">
+        <span class="loader"><span class="loader-inner"></span></span>
+    </div>
     <nav class="navigation">
         <ul class="header">
             <li class="icon_navbar"><a href="" class="icon_navbar"><img class="nav_icon_header" src="images/icons/Icon_Inventory_Furnishings.png" title="Home"></a></li>
