--- a/html/albedo.html
+++ b/html/albedo.html
@@ -249,6 +249,9 @@
                             <span class="talentsContent">Plunges from mid-air to strike the ground below, damaging opponents along the path and dealing AoE DMG upon impact.</span>
                         </div>
                     </div>
+                    <div class="talent_gif">
+                        <img src="../images/talents-gif/albedo/Talent_Favonius_Bladework_-_Weiss_Normal.gif">
+                    </div>
                 </div>
                 <div class="talent2">
                     <div>
