--- a/html/albedo.html
+++ b/html/albedo.html
@@ -267,6 +267,9 @@
                             <span class="talentsContent">Solar Isotoma is considered a Geo construct.</span>
                         </div>
                     </div>
+                    <div class="talent_gif">
+                        <img src="../images/talents-gif/albedo/Talent_Abiogenesis_Solar_Isotoma_Press.gif">
+                    </div>
                 </div>
                 <div class="talent3">
                     <div>
@@ -277,6 +280,9 @@
                             <span class="talentsContent">Under Albedo's command, Geo crystals surge and burst forth, dealing AoE Geo DMG in front of him.<br>If a Solar Isotoma created by Albedo himself is on the field, 7 Fatal Blossoms will be generated in the Solar Isotoma field, bursting violently into bloom and dealing AoE Geo DMG</span>
                             <span class="talentsContent">Tecotonic Tide DMG and Fatal Blossom DMG will not generate Transient Blossoms.</span>
                         </div>
+                    </div>
+                    <div class="talent_gif">
+                        <img src="../images/talents-gif/albedo/Talent_Rite_of_Progeniture_Tectonic_Tide.gif">
                     </div>
                 </div>
                 <div class="talentPass">
