--- a/html/albedo.html
+++ b/html/albedo.html
@@ -18,6 +18,7 @@
     <script src="../script/main.js"></script>
     <script src="../script/charaNavBar.js"></script>
     <script src="../script/switchContent.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.css" integrity="sha512-TD/aL30dNLN0VaHVoh9voFlNi7ZuWQYtV4bkIJv2ulZ8mEEkZJ7IyGvDthMKvIUwzLmPONnjQlAi55HTERVXpw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body class="albedo">
